update code font

--- a/Illumina_QC/style.css
+++ b/Illumina_QC/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@600&display=swap');
+code {
+  white-space: inherit;
+  font-family: 'JetBrains Mono', monospace !important;
+}
+
 p.caption {
   color: #777;
   margin-top: 10px;
@@ -30,4 +36,9 @@ pre code {
   .book .book-body .body-inner{
     position:static;min-height:calc(100% - 50px)
   }
+}
+.Rchunk {
+  background-color: #f7f7f7 !important;
+  border: 3px solid #808080 !important;
+  font-weight: bolder;
 }
