--- a/Illumina_QC/style.css
+++ b/Illumina_QC/style.css
@@ -8,7 +8,10 @@
 code {
   white-space: inherit;
   font-family: 'Fira Mono', monospace !important;
-  font-weight: bolder;
+  font-weight: bolder !important;
+  background-color: #f7f7f7 !important;
+  color: #333333 !important;
+  border-radius: 5px 5px 5px;
 }
 p.caption {
   color: #777;
@@ -44,7 +47,21 @@ pre code {
   }
 }
 .Rchunk {
-  background-color: #f7f7f7 !important;
   border: 3px solid #808080 !important;
   font-weight: bolder;
+  background-color: #f7f7f7 !important;
+  border-radius: 5px 5px 5px;
+}
+.container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
